# governance-pallet-template

./: Cargo.toml
pallets/simple-governance/: Cargo.toml  README.md
pallets/simple-governance/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
